--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,17 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:gravity="center_horizontal"
+    android:orientation="vertical"
+    android:paddingLeft="60dp"
+    android:paddingRight="60dp"
+    android:paddingTop="20dp"
     tools:context="com.halfplatepoha.myappportfolio.MainActivity">
 
     <TextView
-        android:text="Hello World!"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-</RelativeLayout>
+        android:layout_height="wrap_content"
+        android:text="@string/title_string"
+        android:textSize="24sp"/>
+
+    <Button android:id="@+id/btnSpotifyStreamer"
+        style="@style/IntroScreenButtonStyle"
+        android:text="Spotify Streamer" />
+
+    <Button android:id="@+id/btnScores"
+        style="@style/IntroScreenButtonStyle"
+        android:text="Scores App"/>
+
+    <Button android:id="@+id/btnLibrary"
+        style="@style/IntroScreenButtonStyle"
+        android:text="Library App"/>
+
+    <Button android:id="@+id/btnBuildItBigger"
+        style="@style/IntroScreenButtonStyle"
+        android:text="Build it Bigger"/>
+
+    <Button android:id="@+id/btnXyzReader"
+        style="@style/IntroScreenButtonStyle"
+        android:text="XYZ Reader"/>
+
+    <Button android:id="@+id/btnCapstone"
+        style="@style/IntroScreenButtonStyle"
+        android:text="Capstone: My Own App"
+        android:textColor="@android:color/white"
+        android:background="@color/colorCapstoneButton"/>
+
+</LinearLayout>
